schools/force-app/main/default/objects/Teacher_Student__c/Teacher_Student__c.object-meta.xml
<CustomObject>
    <label>Teacher Student</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Student Teacher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teacher Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>