schools/force-app/main/default/objects/Teacher_Student__c/fields/Teacher_ID__c.field-meta.xml
<CustomField>
    <fullName>Teacher_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Teacher ID</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Teacher Students</relationshipLabel>
    <relationshipName>Teacher_Students</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>